[package]
name = "louis-sys"
version = "0.1.0"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/louis-sys"
license = "LGPL-3.0"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.37.4"

[dev-dependencies]
semver-parser = "0.9.0"
