[package]
name = "louis-sys"
version = "0.2.0"
authors = ["muvlon <muvlon@hentzes.de>"]
links = "louis"
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/louis-sys"
license = "LGPL-3.0"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
edition = "2018"

[dependencies]

[build-dependencies]
bindgen = "0.37.4"

[dev-dependencies]
semver-parser = "0.9.0"
lazy_static = "1.0.1"
