[package]
name = "louis-sys"
version = "0.4.0"
authors = ["muvlon <muvlon@hentzes.de>"]
links = "louis"
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/louis-sys"
license = "LGPL-3.0"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.37.4"

[dev-dependencies]
semver-parser = "0.9.0"
lazy_static = "1.0.1"


[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
dependencies = [ "liblouis-dev" ]
